@@ -35,7 +35,7 @@
         <!-- new stuff -->
         <A HREF="http://nowhere.org/" Name="Here">NoWhere</A>
         <A HREF="http://nowhere.org/padded" Name=" Here "> NoWhere </A>
-        <A HREF="blongo.html">Blongo!</A>
+        <A HREF="form_test.html" class="formtest">Form Test</A>
     </body>
 </html>
 
