@@ -1,5 +1,10 @@
 = Mechanize CHANGELOG
 
+=== Unreleased
+
+* Bug fix
+  * Fix element(s)_with(search: selector) methods not working for forms, form fields and frames. (#444)
+
 === 2.7.5
 
 * New Features
